fixed formatting issue on small windows

--- a/Frontend/styles/overlay.css
+++ b/Frontend/styles/overlay.css
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
     color: rgb(83, 1, 1);
-    z-index: 10;
+    z-index: 101;
 }
 
 .modal {
