--- a/Frontend/styles/searchAndFilter.css
+++ b/Frontend/styles/searchAndFilter.css
@@ -1,13 +1,3 @@
-.search-and-filter-container:before {
-    position: absolute;
-    top: -30px;
-    right: -30px;
-    bottom: -10px;
-    left: -30px;
-    content: "";
-    background-color: #d9bcbc;
-}
-
 .search-and-filter-container {
     position: sticky;
     top: 0px;
