--- a/Frontend/styles/sidebar.css
+++ b/Frontend/styles/sidebar.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: space-between;
     overflow-y: scroll;
-    z-index: 1;
+    z-index: 100;
 }
 
 .links-container {
